Added animation for transition between Home and Quiz

--- a/Enfoca/Features/Quiz/Quiz.storyboard
+++ b/Enfoca/Features/Quiz/Quiz.storyboard
@@ -170,6 +170,7 @@
                     </view>
                     <connections>
                         <outlet property="cardSideSegmentedControl" destination="pnF-29-0al" id="aoh-4d-HAX"/>
+                        <outlet property="headerBackgroundView" destination="q1d-8s-92l" id="pcR-Rf-duH"/>
                         <outlet property="titleLabel" destination="DXF-B8-fPG" id="1sd-IL-pIH"/>
                         <outlet property="wordCountLabel" destination="bfZ-Ux-7sl" id="Gkw-fw-TV3"/>
                         <outlet property="wordOrderPicker" destination="cgd-3r-M2o" id="GoD-OT-X7d"/>
@@ -177,7 +178,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kps-BM-sAg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="152.80000000000001" y="111.99400299850076"/>
+            <point key="canvasLocation" x="184" y="112"/>
         </scene>
     </scenes>
 </document>
